--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,21 @@
 version: '2'
 services:
-  odoo12e:
-    image: shabanash/odoo12-enterprise
+  odoo14e:
+    image: shabanash/odoo14-community
     user: root
     ports:
-      - "12001:8069"
-      - "12002:8072" # live chat
+      - "14101:8069"
+      - "14102:8072" # live chat
     tty: true
+    command: --
     environment:
       - HOST=192.168.10.44
-      - USER=odoo12e
-      - PASSWORD=odoo12e
+      - USER=odoo14c
+      - PASSWORD=odoo14c
     volumes:
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+      #- ./entrypoint.sh:/entrypoint.sh   # if you want to install additional Python packages, uncomment this line!
       - ./addons:/mnt/extra-addons
       - ./etc:/etc/odoo
     restart: always             # run as a service
